--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@ layout: landing
         TL;DR – I am passionate about developing rigorous, interpretable methods for analyzing complex systems in the natural and social sciences.
         </br>
         </br>
+        When I’m not doing research, I like to play <a href="https://soundcloud.com/david-watson">music</a> and get real worked up about my favorite (and least favorite) works of theatre, film, and fiction.  
+        </br>
+        </br>
         Unrelatedly, here are some people and things I think are very cool:
           <ul>
             <li><a href="https://plato.stanford.edu/entries/heraclitus/">-Heraclitus</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Hard_bop">-Hard bop</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Susan_Sontag">-Susan Sontag</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Absurdism">-Absurdism</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Macaroni_and_cheese">-Mac & cheese</a></li>
+            <li><a href="https://cooking.nytimes.com/recipes/1014844-beef-empanadas">-Empanadas</a></li>
           </ul>
-         …and much more!
       </p>
        <!-- 
       <section>
