--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@ layout: landing
         </br>
         </br>
         Unrelatedly, here are some people and things I think are very cool:
-          <ul>
-            <li><a href="https://plato.stanford.edu/entries/heraclitus/">-Heraclitus</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Hard_bop">-Hard bop</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Susan_Sontag">-Susan Sontag</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Absurdism">-Absurdism</a></li>
-            <li><a href="https://cooking.nytimes.com/recipes/1014844-beef-empanadas">-Empanadas</a></li>
-          </ul>
+        </br>
+        <a href="https://plato.stanford.edu/entries/heraclitus/">-Heraclitus</a>
+        </br>
+        <a href="https://en.wikipedia.org/wiki/Hard_bop">-Hard bop</a>
+        </br>
+        <a href="https://en.wikipedia.org/wiki/Hard_bop">-Hard bop</a>
+        </br>
+        <a href="https://en.wikipedia.org/wiki/Susan_Sontag">-Susan Sontag</a>
+        </br>
+        <a href="https://en.wikipedia.org/wiki/Absurdism">-Absurdism</a>
+        </br>
+        <a href="https://cooking.nytimes.com/recipes/1014844-beef-empanadas">-Empanadas</a>
       </p>
        <!-- 
       <section>
