feat: add profile picture to `index.html` landing page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: landing
 <!-- Main -->
 <div class="wrapper style1">
 
-  <div class="container">
+  <div class="container 125%">
     <article id="main" class="special">
       <p>
         I am a doctoral candidate at the <a href="http://www.ox.ac.uk/">University of Oxford</a>, where my research focuses on the conceptual and technical foundations of explainable machine learning. I am also the CTO and co-founder of <a href="http://www.thermoai.com/">ThermoAI</a>, a clean energy startup devoted to reducing global emissions through smarter combustion modeling and optimization. I am a founding member of Oxford’s <a href="https://www.oii.ox.ac.uk/research/digital-ethics-lab/">Digital Ethics Lab</a>, an occasional contributor to <a href="https://www.economist.com//">The Economist</a>, and a Data Scientist at large for Queen Mary University’s <a href="https://www.qmul.ac.uk/c4tb/">Centre for Translational Bioinformatics</a>.
@@ -29,6 +29,9 @@ layout: landing
         <br />
         <a href="https://cooking.nytimes.com/recipes/1014844-beef-empanadas">-Empanadas</a>
       </p>
+      <div id="profile-picture" class="image-wrapper">
+        <img src="/images/profile-pic.png" alt="profile-pic"/>
+      </div>
     </article>
   </div>
 
