--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ layout: landing
   <div class="container 125%">
     <article id="main" class="special">
       <p>
-        I am a Postdoctoral Research Fellow in the <a href="https://www.ucl.ac.uk/statistics/">Department of Statistical Science</a> at <a href="https://www.ucl.ac.uk/">University College London</a>, where I develop machine learning methods for causal inference. Before that, I earned my doctorate from the <a href="http://www.ox.ac.uk/">University of Oxford</a>, studying explainable artificial intelligence at the <a href="http://www.oii.ox.ac.uk/">Oxford Internet Institute</a>. In addition to my academic work, I am also the CTO and co-founder of <a href="http://www.thermoai.com/">ThermoAI</a>, a clean energy startup devoted to reducing global emissions through smarter combustion modeling and optimization. I am a founding member of Oxford’s <a href="https://www.oii.ox.ac.uk/research/digital-ethics-lab/">Digital Ethics Lab</a>, an occasional contributor to <a href="https://www.economist.com//">The Economist</a>, and a Data Scientist at large for Queen Mary University’s <a href="https://www.qmul.ac.uk/c4tb/">Centre for Translational Bioinformatics</a>.
+        I am a Postdoctoral Research Fellow in the <a href="https://www.ucl.ac.uk/statistics/">Department of Statistical Science</a> at <a href="https://www.ucl.ac.uk/">University College London</a>, where I develop machine learning methods for causal inference. In September 2022, I will join the faculty at <a href="https://www.kcl.ac.uk/">King's College London</a>'s <a href="https://www.kcl.ac.uk/informatics">Department of Informatics</a>, where I will be a Lecturer (i.e., Assistant Professor) in Artificial Intelligence. Previously, I earned my doctorate from the <a href="http://www.ox.ac.uk/">University of Oxford</a>, studying algorithmic fairness and interpretability at the <a href="http://www.oii.ox.ac.uk/">Oxford Internet Institute</a>. In addition to my academic work, I am also the co-founder of <a href="http://www.thermoai.com/">ThermoAI</a>, a clean energy startup devoted to reducing global emissions through smarter combustion modeling and optimization. I am a founding member of Oxford’s <a href="https://twitter.com/cdigitalethics">Centre for Digital Ethics</a>, an occasional contributor to <a href="https://www.economist.com//">The Economist</a>, and a Data Scientist at large for Queen Mary University’s <a href="https://www.qmul.ac.uk/c4tb/">Centre for Translational Bioinformatics</a>.
         <br />
         <br />
         TL;DR – I am passionate about developing rigorous, interpretable methods for analyzing complex systems in the natural and social sciences.
         <br />
         <br />
-        When I’m not doing research, I like to play <a href="https://soundcloud.com/david-watson">music</a> and get real worked up about my favorite (and least favorite) works of theatre, film, and fiction.  
+        When I’m not doing research, I like to play <a href="https://soundcloud.com/david-watson">music</a> and get real worked up about my favorite (and least favorite) books, plays, and movies.  
         <br />
         <br />
         Unrelatedly, here are some people and things I think are very cool:
@@ -25,7 +25,7 @@ layout: landing
         <br />
         <a href="https://en.wikipedia.org/wiki/Susan_Sontag">-Susan Sontag</a>
         <br />
-        <a href="https://en.wikipedia.org/wiki/Absurdism">-Absurdism</a>
+        <a href="https://en.wikipedia.org/wiki/Art_Nouveau">-Art Nouveau</a>
         <br />
         <a href="https://cooking.nytimes.com/recipes/1014844-beef-empanadas">-Empanadas</a>
       </p>
