--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@ layout: landing
   <div class="container 125%">
     <article id="main" class="special">
       <p>
-        I am a Postdoctoral Research Fellow in the <a href="https://www.ucl.ac.uk/statistics/">Department of Statistical Science</a> at <a href="https://www.ucl.ac.uk/">University College London</a>, where I develop machine learning methods for causal inference. In September 2022, I will join the faculty at <a href="https://www.kcl.ac.uk/">King's College London</a>'s <a href="https://www.kcl.ac.uk/informatics">Department of Informatics</a>, where I will be a Lecturer in Artificial Intelligence. Previously, I earned my doctorate from the <a href="http://www.ox.ac.uk/">University of Oxford</a>, studying algorithmic fairness and interpretability at the <a href="http://www.oii.ox.ac.uk/">Oxford Internet Institute</a>. In addition to my academic work, I am also the co-founder of <a href="http://www.thermoai.com/">ThermoAI</a>, a clean energy startup devoted to reducing global emissions through smarter combustion modeling and optimization. I am a founding member of Oxford’s <a href="https://twitter.com/cdigitalethics">Centre for Digital Ethics</a>, an Associate Editor at <em><a href="https://www.springer.com/journal/13347/editors">Philosophy & Technology</a></em>, an occasional contributor to <em><a href="https://www.economist.com//">The Economist</a></em>, and a Data Scientist at large for Queen Mary University’s <a href="https://www.qmul.ac.uk/c4tb/">Centre for Translational Bioinformatics</a>.
+        I am a Lecturer in Artificial Intelligence at <a href="https://www.kcl.ac.uk/">King's College London</a>'s <a href="https://www.kcl.ac.uk/informatics">Department of Informatics</a>. My primary research interests include machine learning, philosophy of science, and bioinformatics.
+        <br />
+        <br />
+        Previously, I was a Postdoctoral Research Fellow in the <a href="https://www.ucl.ac.uk/statistics/">Department of Statistical Science</a> at <a href="https://www.ucl.ac.uk/">University College London</a>, where I developed methods for causal discovery and inference. Before that, I earned my doctorate from the <a href="http://www.ox.ac.uk/">University of Oxford</a>, studying algorithmic fairness and interpretability at the <a href="http://www.oii.ox.ac.uk/">Oxford Internet Institute</a>. I am an Associate Editor at <em><a href="https://www.springer.com/journal/13347/editors">Philosophy & Technology</a></em>, a founding member of Oxford’s <a href="https://twitter.com/cdigitalethics">Centre for Digital Ethics</a>, an occasional contributor to <em><a href="https://www.economist.com//">The Economist</a></em>, and a Data Scientist at large for Queen Mary University’s <a href="https://www.qmul.ac.uk/c4tb/">Centre for Translational Bioinformatics</a>.
         <br />
         <br />
         TL;DR – I am passionate about developing rigorous, interpretable methods for analyzing complex systems in the natural and social sciences.
@@ -25,7 +28,7 @@ layout: landing
         <br />
         <a href="https://en.wikipedia.org/wiki/Susan_Sontag">-Susan Sontag</a>
         <br />
-        <a href="https://en.wikipedia.org/wiki/Art_Nouveau">-Art Nouveau</a>
+        <a href="https://en.wikipedia.org/wiki/Permanent_revolution">-Revolution</a>
         <br />
         <a href="https://cooking.nytimes.com/recipes/1014844-beef-empanadas">-Empanadas</a>
       </p>
