--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@ layout: landing
         <br />
         I also have the privilege of supervising some awesome doctoral candidates:
         <br />
-        <a href="https://www.kcl.ac.uk/people/matthew-shorvon">-Matthew Shorvon</a>
+        <a href="https://safeandtrustedai.org/person/matthew-shorvon/">-Matthew Shorvon</a>  (Safe & Trusted AI CDT)
         <br />
-        <a href="https://www.kcl.ac.uk/people/jordan-penn">-Jordan Penn</a>
+        <a href="https://safeandtrustedai.org/person/samuel-goring/">-Sam Goring</a>  (Safe & Trusted AI CDT)
         <br />
-        <a href="https://www.kcl.ac.uk/people/samuel-goring">-Samuel Goring</a>
+        -Jordan Penn (Multiscale Models for Life CDT)
         <br />
+        -Stephen Asiedu
+        <br />
+        -Binh Vu (Data-Driven Health CDT)
         <br />
         When I’m not doing research, I like to play <a href="https://soundcloud.com/david-watson">music</a> and get real worked up about my favorite (and least favorite) books, plays, and movies.  
         <br />
