--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ layout: landing
         <br />
         -Jordan Penn (Multiscale Models for Life CDT)
         <br />
-        -Stephen Asiedu
+        <a href="https://safeandtrustedai.org/person/stephen-maranatha-asiedu/">-Stephen Asiedu</a> (Safe & Trusted AI CDT-aligned)
         <br />
-        -Binh Vu (Data-Driven Health CDT)
+        <a href="https://www.kcl.ac.uk/people/binh-duc-vu">-Binh Duc Vu</a> (DRIVE-Health CDT)
         <br />
         <br />
         When I’m not doing research, I like to play <a href="https://soundcloud.com/david-watson">music</a> and get real worked up about my favorite (and least favorite) books, plays, and movies.  
