--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@ layout: landing
         <a href="https://www.kcl.ac.uk/people/binh-duc-vu">-Binh Duc Vu</a> (DRIVE-Health CDT)
         <br />
         <br />
+        Secondary supervisees include:
+        <br />
+        -Benteng Ma 
+        <br />
+        <a href="https://safeandtrustedai.org/person/basak-kocaoglu/">-Basak Kocaoglu</a>  (Safe & Trusted AI CDT)
+        <br />
+        <a href="https://safeandtrustedai.org/person/israel-shitta/">-Israel Shitta</a>  (Safe & Trusted AI CDT)
+        <br />
+        <a href="https://safeandtrustedai.org/person/sriram-bharadwaj-rangarajan/">-Sriram Bharadwaj Rangarajan</a>  (Safe & Trusted AI CDT)
+        <br />
+        -Edoardo Pona
+        <br />
+        <br />
         When I’m not doing research, I like to play <a href="https://soundcloud.com/david-watson">music</a> and get real worked up about my favorite (and least favorite) books, plays, and movies.  
         <br />
         <br />
