profiles in courage

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ layout: landing
         <a href="https://cooking.nytimes.com/recipes/1014844-beef-empanadas">-Empanadas</a>
       </p>
       <div id="profile-picture" class="image-wrapper">
-        <img src="/images/profile-pic.png" alt="profile-pic"/>
+        <img src="/images/profile-pic.jpg" alt="profile-pic"/>
       </div>
     </article>
   </div>
